--- a/JS11/P1_JS11.ipynb
+++ b/JS11/P1_JS11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEcZq/35iyVfAD8dHWq8pr",
+      "authorship_tag": "ABX9TyNs5CwNfmQsuDpKML5sgrdh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "hdnXm9-1fv2r"
       },
@@ -325,7 +325,7 @@
         "id": "IlDWP1_Xf-5_",
         "outputId": "9f556788-ed8c-4314-afd5-a4e289b2b5f9"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +389,7 @@
         "id": "gqe2c5nrgDBC",
         "outputId": "594a18b4-a4dd-42d1-e3dc-a9c8ea06dbee"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +437,7 @@
         "id": "BdBq05fwgM9R",
         "outputId": "00b102c3-80be-498e-b408-2083e4bad05b"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +904,7 @@
       "metadata": {
         "id": "PWS86xLkgO4L"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -921,7 +921,7 @@
         "id": "JR7GRv0YgQ5V",
         "outputId": "62439b2f-db65-4eb8-f3e0-9e718d41ecbd"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -991,7 +991,7 @@
         "id": "I0zHVC7Ggb9U",
         "outputId": "99932a16-3872-44d0-b73f-baac0a21adbb"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1026,7 +1026,7 @@
         "id": "nh9P2w4qhSMk",
         "outputId": "e1c16676-52ba-4b46-cd40-2327a937d260"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1144,7 @@
         "id": "wChzbmkwgi4P",
         "outputId": "cd9e02c4-e5a3-4d0b-d831-24733a6b227b"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1204,7 +1204,7 @@
         "id": "A2IzOB7Lkd6E",
         "outputId": "aa8a2a70-3a48-46e1-b535-327ea8ed3925"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,30 +1220,30 @@
       "source": [
         "import nbformat\n",
         "\n",
-        "path = \"/content/drive/MyDrive/Pembelajaran Mesin/JS11/P1_JS11.ipynb\"\n",
+        "notebook_path = \"/content/drive/MyDrive/Pembelajaran Mesin/JS11/P1_JS11.ipynb\"\n",
         "\n",
-        "nb = nbformat.read(path, as_version=4)\n",
+        "nb = nbformat.read(notebook_path, as_version=4)\n",
         "\n",
         "if \"widgets\" in nb.metadata:\n",
         "    del nb.metadata[\"widgets\"]\n",
         "\n",
-        "nbformat.write(nb, path)\n",
-        "print(\"Metadata widgets sudah dihapus!\")\n"
+        "nbformat.write(nb, notebook_path)\n",
+        "print(\"Berhasil: metadata widgets dihapus dari\", notebook_path)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "apQhX0hekEMv",
-        "outputId": "a6e04aa5-fbb1-4185-d953-63cff68216da"
+        "outputId": "6471d572-0ebd-45fc-b52f-43764a74a701"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Metadata widgets sudah dihapus!\n"
+            "Berhasil: metadata widgets dihapus dari /content/drive/MyDrive/Pembelajaran Mesin/JS11/P1_JS11.ipynb\n"
           ]
         }
       ]
