--- a/JS13/P1_JS13.ipynb
+++ b/JS13/P1_JS13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbPV7C22d3tgwPYjmB7dEr",
+      "authorship_tag": "ABX9TyNFaetsyOK9gddRf5GoxFGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,421 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 1"
+      ],
       "metadata": {
-        "id": "uqiy7UWkuWIw"
+        "id": "ln25KYx1GcJB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 1 ini akan membuat JST sederhana (2 layer) dengan forward pass dan backpropagation manual."
+      ],
+      "metadata": {
+        "id": "bT6MTzc8Gd6b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Langkah:\n",
+        "\n",
+        "1. Buat dataset sederhana (XOR).\n",
+        "\n",
+        "2. Inisialisasi bobot dan bias.\n",
+        "\n",
+        "3. Implementasikan forward pass.\n",
+        "\n",
+        "4. Hitung error dan lakukan backpropagation.\n",
+        "\n",
+        "5. Update bobot menggunakan gradient descent."
+      ],
+      "metadata": {
+        "id": "h7pZvIu1Ggbx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "uqiy7UWkuWIw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "710b279e-82bb-4075-a3a8-4d5590d4a197"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0, Loss: 0.34657419616597734\n",
+            "Epoch 1000, Loss: 0.18959222949075316\n",
+            "Epoch 2000, Loss: 0.09022582679238736\n",
+            "Epoch 3000, Loss: 0.02411986121413958\n",
+            "Epoch 4000, Loss: 0.011133189328346591\n",
+            "Epoch 5000, Loss: 0.006850949527328318\n",
+            "Epoch 6000, Loss: 0.004844743579618249\n",
+            "Epoch 7000, Loss: 0.0037084642685481168\n",
+            "Epoch 8000, Loss: 0.002985935542885267\n",
+            "Epoch 9000, Loss: 0.0024895351803016575\n",
+            "Prediksi:\n",
+            "[[0.04063289]\n",
+            " [0.95191179]\n",
+            " [0.95197706]\n",
+            " [0.04741389]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Dataset XOR\n",
+        "X = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
+        "y = np.array([[0],[1],[1],[0]])\n",
+        "\n",
+        "# Parameter\n",
+        "input_size = 2\n",
+        "hidden_size = 2\n",
+        "output_size = 1\n",
+        "lr = 0.1\n",
+        "\n",
+        "# Inisialisasi bobot\n",
+        "W1 = np.random.randn(input_size, hidden_size)\n",
+        "b1 = np.zeros((1, hidden_size))\n",
+        "W2 = np.random.randn(hidden_size, output_size)\n",
+        "b2 = np.zeros((1, output_size))\n",
+        "\n",
+        "# Fungsi aktivasi\n",
+        "def sigmoid(x):\n",
+        "    return 1 / (1 + np.exp(-x))\n",
+        "\n",
+        "def sigmoid_derivative(x):\n",
+        "    return x * (1 - x)\n",
+        "\n",
+        "# Training\n",
+        "for epoch in range(10000):\n",
+        "    # Forward pass\n",
+        "    z1 = np.dot(X, W1) + b1\n",
+        "    a1 = sigmoid(z1)\n",
+        "    z2 = np.dot(a1, W2) + b2\n",
+        "    a2 = sigmoid(z2)\n",
+        "\n",
+        "    # Hitung error\n",
+        "    error = y - a2\n",
+        "\n",
+        "    # Backpropagation\n",
+        "    d_a2 = error * sigmoid_derivative(a2)\n",
+        "    d_W2 = np.dot(a1.T, d_a2)\n",
+        "    d_b2 = np.sum(d_a2, axis=0, keepdims=True)\n",
+        "\n",
+        "    d_a1 = np.dot(d_a2, W2.T) * sigmoid_derivative(a1)\n",
+        "    d_W1 = np.dot(X.T, d_a1)\n",
+        "    d_b1 = np.sum(d_a1, axis=0, keepdims=True)\n",
+        "\n",
+        "    # Update bobot\n",
+        "    W1 += lr * d_W1\n",
+        "    b1 += lr * d_b1\n",
+        "    W2 += lr * d_W2\n",
+        "    b2 += lr * d_b2\n",
+        "\n",
+        "    if epoch % 1000 == 0:\n",
+        "        loss = np.mean(np.square(error))\n",
+        "        print(f\"Epoch {epoch}, Loss: {loss}\")\n",
+        "\n",
+        "# Output akhir\n",
+        "print(\"Prediksi:\")\n",
+        "print(a2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas 1:\n",
+        "\n",
+        "- Ubah jumlah neuron hidden layer menjadi 3.\n",
+        "\n",
+        "- Bandingkan hasil loss dengan konfigurasi awal.\n",
+        "\n",
+        "- Tambahkan fungsi aktivasi ReLU dan bandingkan hasil."
+      ],
+      "metadata": {
+        "id": "yvgRZihGGoQq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "a. Ubah jumlah neuron hidden layer menjadi 3."
+      ],
+      "metadata": {
+        "id": "FBRnWQ5qGtwz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Dataset XOR\n",
+        "X = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
+        "y = np.array([[0],[1],[1],[0]])\n",
+        "\n",
+        "# Parameter\n",
+        "input_size = 2\n",
+        "hidden_size = 3   # Ubah menjadi 3 neuron\n",
+        "output_size = 1\n",
+        "lr = 0.1\n",
+        "\n",
+        "# Inisialisasi bobot\n",
+        "W1 = np.random.randn(input_size, hidden_size)\n",
+        "b1 = np.zeros((1, hidden_size))\n",
+        "W2 = np.random.randn(hidden_size, output_size)\n",
+        "b2 = np.zeros((1, output_size))\n",
+        "\n",
+        "# Fungsi aktivasi\n",
+        "def sigmoid(x): return 1 / (1 + np.exp(-x))\n",
+        "def sigmoid_derivative(x): return x * (1 - x)\n",
+        "\n",
+        "# Training\n",
+        "for epoch in range(10000):\n",
+        "    # Forward\n",
+        "    z1 = np.dot(X, W1) + b1\n",
+        "    a1 = sigmoid(z1)\n",
+        "    z2 = np.dot(a1, W2) + b2\n",
+        "    a2 = sigmoid(z2)\n",
+        "\n",
+        "    # Error\n",
+        "    error = y - a2\n",
+        "\n",
+        "    # Backprop\n",
+        "    d_a2 = error * sigmoid_derivative(a2)\n",
+        "    d_W2 = np.dot(a1.T, d_a2)\n",
+        "    d_b2 = np.sum(d_a2, axis=0, keepdims=True)\n",
+        "\n",
+        "    d_a1 = np.dot(d_a2, W2.T) * sigmoid_derivative(a1)\n",
+        "    d_W1 = np.dot(X.T, d_a1)\n",
+        "    d_b1 = np.sum(d_a1, axis=0, keepdims=True)\n",
+        "\n",
+        "    # Update bobot\n",
+        "    W1 += lr * d_W1\n",
+        "    b1 += lr * d_b1\n",
+        "    W2 += lr * d_W2\n",
+        "    b2 += lr * d_b2\n",
+        "\n",
+        "    if epoch % 1000 == 0:\n",
+        "        print(f\"Epoch {epoch}, Loss: {np.mean(np.square(error))}\")\n",
+        "\n",
+        "print(\"Prediksi akhir:\")\n",
+        "print(a2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1eezijaH0b5L",
+        "outputId": "cefabd98-8f0c-4c71-caac-4c0462f285d9"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0, Loss: 0.28144226747830925\n",
+            "Epoch 1000, Loss: 0.2407204612355499\n",
+            "Epoch 2000, Loss: 0.18119701939315988\n",
+            "Epoch 3000, Loss: 0.0805993153092138\n",
+            "Epoch 4000, Loss: 0.028335471531032018\n",
+            "Epoch 5000, Loss: 0.014232537062334977\n",
+            "Epoch 6000, Loss: 0.008960949050515817\n",
+            "Epoch 7000, Loss: 0.00638362801335057\n",
+            "Epoch 8000, Loss: 0.0048983094581347\n",
+            "Epoch 9000, Loss: 0.003946376787251339\n",
+            "Prediksi akhir:\n",
+            "[[0.02593097]\n",
+            " [0.9419445 ]\n",
+            " [0.93909527]\n",
+            " [0.07355076]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pada konfigurasi awal, jaringan menggunakan 2 neuron pada hidden layer dengan fungsi aktivasi sigmoid. Setelah dilakukan modifikasi jumlah neuron hidden layer menjadi 3 neuron, diperoleh hasil sebagai berikut:\n",
+        "\n",
+        "\n",
+        "| Konfigurasi       | Loss Akhir (Epoch 9000) |\n",
+        "| ----------------- | ----------------------- |\n",
+        "| Hidden = 2 (awal) | **0.00248953**          |\n",
+        "| Hidden = 3        | **0.00394637**          |\n",
+        "\n",
+        "\n",
+        "\n",
+        "Berdasarkan hasil tersebut, dapat disimpulkan bahwa:\n",
+        "\n",
+        "- Penambahan jumlah neuron dari 2 menjadi 3 tidak serta-merta menurunkan loss.\n",
+        "\n",
+        "- Pada percobaan ini, loss akhir konfigurasi 3 neuron lebih tinggi ~58% dibandingkan konfigurasi awal.\n",
+        "\n",
+        "- Hal ini dapat terjadi karena penambahan kapasitas jaringan membutuhkan penyesuaian bobot awal dan learning rate agar konvergen lebih optimal.\n",
+        "\n",
+        "- Meskipun memiliki kapasitas lebih besar, hidden layer 3 neuron masih menunjukkan performa yang sedikit lebih buruk dibanding konfigurasi awal."
+      ],
+      "metadata": {
+        "id": "mjecs_FvGw62"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "b. Menambahkan fungsi ReLU"
+      ],
+      "metadata": {
+        "id": "MoNNPFT4Gxju"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Dataset XOR\n",
+        "X = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
+        "y = np.array([[0],[1],[1],[0]])\n",
+        "\n",
+        "# Parameter\n",
+        "input_size = 2\n",
+        "hidden_size = 3   # Ubah menjadi 3 neuron\n",
+        "output_size = 1\n",
+        "lr = 0.1\n",
+        "\n",
+        "# Inisialisasi bobot\n",
+        "W1 = np.random.randn(input_size, hidden_size)\n",
+        "b1 = np.zeros((1, hidden_size))\n",
+        "W2 = np.random.randn(hidden_size, output_size)\n",
+        "b2 = np.zeros((1, output_size))\n",
+        "\n",
+        "# Fungsi ReLU\n",
+        "def relu(x): return np.maximum(0, x)\n",
+        "def relu_derivative(x): return np.where(x > 0, 1, 0)\n",
+        "\n",
+        "for epoch in range(10000):\n",
+        "    # Forward\n",
+        "    z1 = np.dot(X, W1) + b1\n",
+        "    a1 = relu(z1)  # ganti sigmoid -> ReLU\n",
+        "    z2 = np.dot(a1, W2) + b2\n",
+        "    a2 = sigmoid(z2)\n",
+        "\n",
+        "    # Error\n",
+        "    error = y - a2\n",
+        "\n",
+        "    # Backprop\n",
+        "    d_a2 = error * sigmoid_derivative(a2)\n",
+        "    d_W2 = np.dot(a1.T, d_a2)\n",
+        "    d_b2 = np.sum(d_a2, axis=0, keepdims=True)\n",
+        "\n",
+        "    d_a1 = np.dot(d_a2, W2.T) * relu_derivative(z1)  # ganti sigmoid_derivative -> relu_derivative\n",
+        "    d_W1 = np.dot(X.T, d_a1)\n",
+        "    d_b1 = np.sum(d_a1, axis=0, keepdims=True)\n",
+        "\n",
+        "    # Update\n",
+        "    W1 += lr * d_W1\n",
+        "    b1 += lr * d_b1\n",
+        "    W2 += lr * d_W2\n",
+        "    b2 += lr * d_b2\n",
+        "\n",
+        "    if epoch % 1000 == 0:\n",
+        "        print(f\"Epoch {epoch}, Loss: {np.mean(np.square(error))}\")\n",
+        "\n",
+        "print(\"Prediksi akhir:\")\n",
+        "print(a2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Ldqi6mjGMIr",
+        "outputId": "d3b143dc-882f-4018-b2f2-74b82d3933e0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0, Loss: 0.25133637222399197\n",
+            "Epoch 1000, Loss: 0.022173539914424018\n",
+            "Epoch 2000, Loss: 0.003928308112946684\n",
+            "Epoch 3000, Loss: 0.0019189815853726249\n",
+            "Epoch 4000, Loss: 0.0012301018084733169\n",
+            "Epoch 5000, Loss: 0.0008929202671324803\n",
+            "Epoch 6000, Loss: 0.0006957449388552095\n",
+            "Epoch 7000, Loss: 0.0005670016850015825\n",
+            "Epoch 8000, Loss: 0.0004769389181111547\n",
+            "Epoch 9000, Loss: 0.00041069851492484975\n",
+            "Prediksi akhir:\n",
+            "[[0.0300553 ]\n",
+            " [0.98590158]\n",
+            " [0.98590155]\n",
+            " [0.01179958]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Selanjutnya, hidden layer tetap menggunakan 3 neuron, namun fungsi aktivasi pada hidden layer diubah menjadi ReLU. Hasil training ditunjukkan berikut:\n",
+        "\n",
+        "| Konfigurasi                | Loss Akhir (Epoch 9000) |\n",
+        "| -------------------------- | ----------------------- |\n",
+        "| Hidden = 2 (awal, sigmoid) | **0.00248953**          |\n",
+        "| Hidden = 3 (sigmoid)       | **0.00394637**          |\n",
+        "| Hidden = 3 + ReLU          | **0.00041069**          |\n",
+        "\n",
+        "\n",
+        "Dari tabel tersebut diperoleh beberapa kesimpulan penting:\n",
+        "\n",
+        "a. Perbandingan dengan Hidden 3 Neuron (Sigmoid)\n",
+        "\n",
+        "- Penggunaan ReLU menyebabkan penurunan loss yang sangat signifikan.\n",
+        "\n",
+        "- Loss akhir ReLU lebih kecil sekitar 89.6% dibandingkan hidden=3 sigmoid.\n",
+        "\n",
+        "- ReLU mempercepat konvergensi dan menghasilkan output prediksi yang lebih mendekati target.\n",
+        "\n",
+        "b. Perbandingan dengan Konfigurasi Awal\n",
+        "\n",
+        "- Konfigurasi 3 neuron + ReLU menghasilkan loss akhir yang 83.5% lebih rendah dibanding konfigurasi awal.\n",
+        "\n",
+        "- Hal ini menunjukkan bahwa ReLU lebih efektif dalam menghindari saturasi gradien yang sering terjadi pada sigmoid."
+      ],
+      "metadata": {
+        "id": "EAwqhtiuIarW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kesimpulan Umum\n",
+        "\n",
+        "- Penambahan jumlah neuron hidden layer dari 2 menjadi 3 tidak otomatis meningkatkan performa. Pada percobaan ini, loss justru sedikit meningkat.\n",
+        "\n",
+        "- Penambahan fungsi aktivasi ReLU pada hidden layer memberikan peningkatan performa yang sangat signifikan.\n",
+        "\n",
+        "- ReLU membantu jaringan belajar lebih cepat dan mencapai loss yang lebih rendah dibanding semua konfigurasi sebelumnya.\n",
+        "\n",
+        "- Kombinasi hidden = 3 neuron + ReLU merupakan konfigurasi terbaik dari tiga eksperimen yang dilakukan."
+      ],
+      "metadata": {
+        "id": "1CVUiNxDIm2u"
+      }
     }
   ]
 }
